# typescript-docs

./: .gitignore  README.md  cabal.config  index.html  params.json  typescript-docs.cabal
examples/: Example.d.ts  index.html  style.css
src/: Main.hs
src/Language/TypeScript/: Docs.hs
src/Language/TypeScript/Docs/: Comments.hs  Html.hs
